--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
   color: black;
   margin: 10px;
-  background-image: url(https://i.imgur.com/5YQzMyf.png);
+  /* background-image: url(https://i.imgur.com/5YQzMyf.png); */
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
