--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,13 @@
 body {
   background-color: white;
+  margin: 10px;
+  background-image: url(https://i.pinimg.com/originals/d4/6e/b7/d46eb7448bcd113f7af1d9619a073c9b.png);
   background-repeat: no-repeat;
-}
+  background-size: contain;
+  background-position: bottom;
+  background-blend-mode: multiply;
 
+}
 
 div {
   display: flex;
@@ -18,6 +23,13 @@ div {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+}
+
+#sb {
+  display: flex;
+  align-self: center;
+  justify-content: flex-start;
+
 }
 
 h2 {
@@ -53,17 +65,6 @@ input[type=submit]:hover {
   background-color: #45a049;
 }
 
-.container {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
-=======
-  margin: 10px;
-  background-image: url(https://i.imgur.com/5YQzMyf.png);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
 
 div {
   display: flex;
