--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ div {
 
 #comic {
   display: flex;
-  justify-content:flex-start;
+  justify-content: flex-start;
 
 }
 
@@ -129,4 +129,16 @@ input[type=text] {
   -webkit-transition: width 0.4s ease-in-out;
   transition: width 0.4s ease-in-out;
 
+}
+
+.column {
+  float: left;
+  width: 25%;
+  padding: 5px;
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
 }
