attempt 1 to remove white space

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,11 @@ body {
   background-size: contain;
   background-position: bottom;
   background-blend-mode: multiply;
+  white-space: nowrap;
+  
 
 }
+
 
 div {
   display: flex;
