--- a/css/styles.css
+++ b/css/styles.css
@@ -14,16 +14,6 @@ div {
   justify-content: center;
 }
 
-/* #carouselExampleIndicators{
-  display: flex;
-
-} */
-
-
-/* #SM {
-  display: flex;
-  align-content: flex-end;
-} */
 
 #Q {
   display: flex;
@@ -44,30 +34,6 @@ h2 {
 p {
   font-family: monospace;
 }
-
-/* input[type=text], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
-}
-
-input[type=submit] {
-  background-color: #4CAF50;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-input[type=submit]:hover {
-  background-color: #45a049;
-} */
 
 
 div {
@@ -102,12 +68,12 @@ div {
   display: flex;
   justify-content: space-between;
 }
-/*
-/* h1 {
+
+h1 {
   color: black;
   font-family: monospace;
   font-size: 4em;
-} */ */
+}
 
 .Cg {
   position:relative;
@@ -117,9 +83,10 @@ div {
 
 .wq {
   position:relative;
-  left:200px;
-  top:550px;
+  left:190px;
+  top:450px;
 }
+
 #gif {
   position:relative;
   left:-380px;
@@ -190,10 +157,6 @@ input[type=text] {
   display: table;
 }
 
-#comic {
-  height: 300px;
-}
-
 
 
 .grid {
@@ -232,19 +195,12 @@ input[type=text] {
 
 
 
-
-
-
-
-/*Eliminates padding, centers the thumbnail */
-
 body, html {
   padding: 0;
   margin: 0;
   text-align: center;
 }
 
-/* Styles the thumbnail */
 
 a.lightbox img {
   height: 150px;
@@ -253,7 +209,6 @@ a.lightbox img {
   margin: 94px 20px 20px 20px;
 }
 
-/* Styles the lightbox, removes it from sight and adds the fade-in transition */
 
 .lightbox-target {
   position: fixed;
@@ -269,7 +224,6 @@ a.lightbox img {
   overflow: hidden;
 }
 
-/* Styles the lightbox image, centers it vertically and horizontally, adds the zoom-in transition and makes it responsive using a combination of margin and absolute positioning */
 
 .lightbox-target img {
   margin: auto;
@@ -289,7 +243,6 @@ a.lightbox img {
   transition: .5s ease-in-out;
 }
 
-/* Styles the close link, adds the slide down transition */
 
 a.lightbox-close {
   display: block;
@@ -308,7 +261,6 @@ a.lightbox-close {
   transition: .5s ease-in-out;
 }
 
-/* Provides part of the "X" to eliminate an image from the close link */
 
 a.lightbox-close:before {
   content: "";
@@ -325,7 +277,6 @@ a.lightbox-close:before {
   transform:rotate(45deg);
 }
 
-/* Provides part of the "X" to eliminate an image from the close link */
 
 a.lightbox-close:after {
   content: "";
@@ -342,7 +293,6 @@ a.lightbox-close:after {
   transform:rotate(-45deg);
 }
 
-/* Uses the :target pseudo-class to perform the animations upon clicking the .lightbox-target anchor */
 
 .lightbox-target:target {
   opacity: 1;
